--- a/wwwroot/css/library-custom.css
+++ b/wwwroot/css/library-custom.css
@@ -83,3 +83,9 @@ a {
     background-color: var(--bs-secondary) !important;
     color: var(--bs-secondary-text);
 }
+
+.navbar-nav .nav-link.active {
+    background-color: #0d6efd;
+    color: white;
+}
+
