--- a/Views/Books/Details.cshtml
+++ b/Views/Books/Details.cshtml
@@ -1,37 +1,41 @@
 ﻿@model LibrarySystem.Models.Book
 
 @{
-    ViewData["Title"] = "Book Details";
+	ViewData["Title"] = "Book Details";
 }
 
 <div class="container mt-4 p-4 rounded shadow-sm" style="background-color: #f8f9fa;">
-    <h1 class="mb-4">Book Details</h1>
+	<h1 class="mb-4">Book Details</h1>
 
-    <dl class="row">
-        <dt class="col-sm-3">
-            @Html.DisplayNameFor(model => model.Title)
-        </dt>
-        <dd class="col-sm-9">
-            @Html.DisplayFor(model => model.Title)
-        </dd>
+	<dl class="row">
+		<dt class="col-sm-3">
+			@Html.DisplayNameFor(model => model.Title)
+		</dt>
+		<dd class="col-sm-9">
+			@Html.DisplayFor(model => model.Title)
+		</dd>
 
-        <dt class="col-sm-3">
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd class="col-sm-9">
-            @Html.DisplayFor(model => model.Description)
-        </dd>
+		<dt class="col-sm-3">
+			@Html.DisplayNameFor(model => model.Description)
+		</dt>
+		<dd class="col-sm-9">
+			@Html.DisplayFor(model => model.Description)
+		</dd>
 
-        <dt class="col-sm-3">
-            Author
-        </dt>
-        <dd class="col-sm-9">
-            @Model.Author?.Name
-        </dd>
-    </dl>
+		<dt class="col-sm-3">
+			Author
+		</dt>
+		<dd class="col-sm-9">
+			@Model.Author?.Name
+		</dd>
+	</dl>
 
-    <div class="d-flex gap-2 mt-4">
-        <a asp-action="Edit" asp-route-id="@Model?.Id" class="btn btn-primary">Edit</a>
-        <a asp-action="Index" class="btn btn-secondary">Back to List</a>
-    </div>
+	@if (Model.Image != null)
+	{
+		<img src="data:image/jpeg;base64,@Convert.ToBase64String(Model.Image)" alt="Book Image" class="img-thumbnail" style="width:200px; height:auto;" />
+	}
+	<div class="d-flex gap-2 mt-4">
+		<a asp-action="Edit" asp-route-id="@Model?.Id" class="btn btn-primary">Edit</a>
+		<a asp-action="Index" class="btn btn-secondary">Back to List</a>
+	</div>
 </div>
