--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -13,7 +13,11 @@
         {
             <div class="col-md-4 mb-4">
                 <div class="card h-100 border-primary">
-                    <div class="card-body">
+                    <div class="card-body d-flex flex-column align-items-center">
+                        @if (book.Image != null)
+                        {
+                            <img src="data:image/jpeg;base64,@Convert.ToBase64String(book.Image)" alt="Book Image" class="img-thumbnail" style="width:200px; height:auto;" />
+                        }
                         <h5 class="card-title">@book.Title</h5>
                         <p class="card-text">@book.Description</p>
                         <p class="card-text">
